Revert commit d6d45921ad0ed124473069025f6f27d01ad60eee